# hids-mcp

./: .gitignore  README.md  pyproject.toml
src/hids_mcp/: __init__.py  server.py
src/hids_mcp/compliance/: __init__.py  audit_trail.py  cmmc.py  nist_800_53.py  sbom.py  stig_checker.py
tests/: __init__.py  conftest.py  test_auth_log_analysis.py  test_file_integrity.py  test_mcp_server.py  test_network_monitoring.py  test_process_monitoring.py  test_security_report.py  test_threat_patterns.py
