[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hids-mcp"
version = "0.1.0"
description = "Host-based Intrusion Detection System - Log analysis, process monitoring, file integrity"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "psutil>=5.9.0",
]

[project.scripts]
hids-mcp = "hids_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hids_mcp"]
